[package]
name = "open_linked_list"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A linked list which allows unsafely mutating, removing, and adding elements in the middle of the list through a pointer."
repository = "https://github.com/nic-obert/open_linked_list"
homepage = "https://github.com/nic-obert/open_linked_list"
documentation = "https://github.com/nic-obert/open_linked_list"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
